# MadBoard

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_dev.py  setup.cfg  setup.py
.github/workflows/: release.yml
madboard/: __init__.py  build.py
madboard/backend/: __init__.py  __main__.py  app.py  routes.py  server.py
madboard/frontend/: package-lock.json  package.json
madboard/frontend/public/: index.html
madboard/frontend/src/: App.js  index.js
madboard/frontend/src/components/: AddProcessDialog.js  CardsTab.js  DiagramsTab.js  Layout.js  MainContent.js  PlotsTab.js  ProcessTab.js  RunTab.js  Sidebar.js  StartRunDialog.js  TaskOutputModal.js
madboard/frontend/src/utils/: formatting.js
