[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "madboard"
version = "0.1.2"
description = "A simple web application with Python Flask backend and React frontend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["flask", "react", "web-application"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[project.scripts]
madboard = "madboard.backend.server:run_server"

[project.urls]
Homepage = "https://github.com/theoheimel/madboard"
Documentation = "https://github.com/theoheimel/madboard#readme"
Repository = "https://github.com/theoheimel/madboard.git"
Issues = "https://github.com/theoheimel/madboard/issues"

[tool.setuptools]
packages = ["madboard", "madboard.backend", "madboard.frontend"]
include-package-data = true

[tool.setuptools.package-data]
madboard = [
    "frontend/build/**/*",
]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
